monolith_kubernetes/GKE/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: my-django-app.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-app
            port:
              number: 8000
